
* Introduced compiler interface "TemplateCompiler"

* Made compiler configurable in Engine allowing for very different compiler implementations even making use of annotations (e.g. for static type information)

* Template now is interface instead of abstract class

* Made all renderer resolvation methods public to be accessible from outside compilers (also added generic parameters)

* Introduced RendererRegistry interface implemented by Engine

* Reverted decision that all renderers get the template context as an additional parameter - now without context again

* Renamed test package "realLive" to "realLife"


Release 3.0
===========

* Engine now holds current version number in #VERSION copied from common.properties

* Engine now supports locale as parameter for transformation that gets passed into TemplateContext for processors and into renderers as an additional parameter - good for locale dependent rendering / processing - breaks public API, though

* NoLogErrorHandler introduced which does does not log, but only throws an exception

* Engine now supports check if variables (expressions) are present in a specific model using #variablesAvailable

* fixed Issue 10: Backslashes in Model data are (incorrectly) removed

* Added Issue 8, fixed Issue 9: add pom.xml to support Maven builds

* fixed Issue 11: Duplicate fields in InterpretedTemplate may cause NPE under some circumstances
  (note: it has impact only in case of some code refactoring)
  
* partially fixed Issue 12: Date Junit Tests fail on different Timezone and/or Locale than MEZ/Germany
  (workaround for CET (Czech) and MET (Germany) Time Zones, but probably fail elsewhere)

Release 3.1pre
==============

* Iteration variable "_it" introduced in foreach loop, e.g.${foreach list i}${_it}${end} is the same as ${foreach list i}${i}${end}

* Introduced new encoder concept that optionally encodes all rendered strings

* Supplied first encoder for XML